[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "targetaudit"
version = "0.1.0"
description = "Auditable research engine for analyst price-target accuracy."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "TargetAudit contributors"}]
keywords = ["finance", "price-targets", "analysts", "backtesting", "research"]

[project.scripts]
targetaudit = "targetaudit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
