[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marketwitness"
version = "0.1.0rc1"
description = "Evidence-first market intelligence dashboard with auditable public-source research labs."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "MarketWitness contributors"}]
keywords = ["finance", "market-intelligence", "ipo", "sec", "volatility", "research"]

[project.optional-dependencies]
warehouse = ["duckdb>=1.2,<2"]
application = ["duckdb>=1.2,<2", "fastapi>=0.110,<1", "httpx>=0.27,<1", "uvicorn>=0.29,<1"]

[project.scripts]
marketwitness = "marketwitness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
